AlarmManger  for  Ads

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KeyBoard</string>
+    <string name="english">en</string>
+    <string name="arabic">ar</string>
+    <string name="button">Activate</string>
 </resources>
